--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Just Fall LOL: Fullscreen, Ad-Free, Unblocked</title>
+    <title>Rooftop Snipers: Fullscreen, Ad-Free, Unblocked</title>
     <meta name="description"
-        content="Experience endless fun with Just Fall: fullscreen, ad-free, and unblocked! Dive into the chaos and conquer without restrictions." />
+        content="Experience endless fun with Rooftop Snipers: fullscreen, ad-free, and unblocked! Dive into the chaos and conquer without restrictions." />
     <link rel="icon" href="images/favicon.png" sizes="32x32" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery-comments.css" />
@@ -22,10 +22,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&amp;display=swap" rel="stylesheet">
 
-
-     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5506020124955884"
-        crossorigin="anonymous"></script>  -->
-
 </head>
 <body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
     <!-- Navigation-->
@@ -36,7 +32,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand js-scroll-trigger" href="index.html">
-                <strong>Just-Fall.Github.io</strong>
+                <strong>Rooftop Snipers</strong>
             </a>
 
 
