--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand js-scroll-trigger" href="index.html">
+            <a class="navbar-brand js-scroll-trigger" href="https://rooftopsnipersgame.github.io">
                 <strong>Rooftop Snipers</strong>
             </a>
 
