--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Experience endless fun with Rooftop Snipers: fullscreen, ad-free, and unblocked! Dive into the chaos and conquer without restrictions."
     />
+    <link rel="canonical" href="https://rooftopsnipersgame.github.io">
     <link rel="icon" href="images/favicon.png" sizes="32x32" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery-comments.css" />
