--- a/dmca.html
+++ b/dmca.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<!-- Mirrored from just-fall.github.io/dmca.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 Apr 2024 12:51:48 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -80,19 +76,19 @@
                                 Updated:
                                 August 18, 2023
                             </h1>
-                            <p class="pb-4">Just-fall.github.io
+                            <p class="pb-4">rooftopsnipersgame.github.io
                                 (the &quot;Site &quot;) respects the intellectual property rights of others and expects
                                 its users to do the same. In accordance with the Digital Millennium Copyright Act of
                                 1998, the text of which may be found on the U.S. Copyright Office website at
                                 http://www.copyright.gov/legislation/dmca.pdf, and specifically in accordance with 17
                                 USC § 512(c)(3),
-                                Just-fall.github.io
+                                rooftopsnipersgame.github.io
                                 will respond expeditiously to claims of copyright infringement committed using the
-                                Just-fall.github.io
+                                rooftopsnipersgame.github.io
                                 service and/or any
-                                Just-fall.github.io
+                                rooftopsnipersgame.github.io
                                 website (the &quot;Site &quot;) if such claims are reported to
-                                Just-fall.github.io
+                                rooftopsnipersgame.github.io
                                 &#x27;s Designated Email identified below.
                             </p>
                             <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">DMCA Notice of
@@ -101,9 +97,9 @@
                                 authorized to act under any exclusive right under copyright, please report alleged
                                 copyright infringements taking place on or through the Site by completing a DMCA Notice
                                 of Alleged Infringement and delivering it to
-                                Just-fall.github.io
+                                rooftopsnipersgame.github.io
                                 &#x27;s Designated Email. Upon receipt of Notice as described below,
-                                Just-fall.github.io
+                                rooftopsnipersgame.github.io
                                 will take whatever action, in its sole discretion, it deems appropriate, including
                                 removal of the challenged content from the Site. Please note that if you fail to comply
                                 with all of the requirements of this section and of 17 USC § 512(c)(3) your DMCA notice
@@ -130,8 +126,8 @@
                                         allegedly infringed.&quot;</li>
                                 </ul>
                                 <li>Provide your full legal name and your electronic or physical signature.</li>
-                                <li>Deliver this Notice, with all items completed, to Just-fall.github.io &#x27;s
-                                    Designated Email: theatrafic@gmail.com </li>
+                                <li>Deliver this Notice, with all items completed, to rooftopsnipersgame.github.io &#x27;s
+                                    Designated Email: rooftopsnipersc@gmail.com </li>
                             </ul>
                         </div>
                     </div>
@@ -140,18 +136,19 @@
         </div>
     </div>
 
-    <footer class="pt-4">
+          <footer class="pt-4">
         <div class="container">
           <div class="row justify-content-evenly">
             <hr class="mb-5">
             <div class="col-md-4 col-12">
-              <a class="d-flex mb-4 text-white h4" href="index.html">
+              <a class="d-flex mb-4 text-white h4" href="./">
                 <img src="./images/logo-icon.svg" width="44" height="34" alt="Logo" class="me-2">
                 <strong>Rooftop Snipers</strong>
               </a>
               <p class="footer-heading">Follow us</p>
               <div class="mb-4">
-                <a href=""><img src="./images/fb-icon.svg" width="40" height="40" alt="social media Icon" class="me-2"></a>
+                <a href=""><img src="./images/fb-icon.svg" width="40" height="40" alt="social media Icon"
+                    class="me-2"></a>
                 <a href=""><img src="./images/insta-icon.svg" width="40" height="40" alt="social media Icon"
                     class="me-2"></a>
                 <a href=""><img src="./images/discord-icon.svg" width="40" height="40" alt="social media Icon"
@@ -160,39 +157,39 @@
               </div>
             </div>
             <div class="col-md col-12">
-              <p class="footer-heading">Menu Heading</p>
+              <p class="footer-heading">FNF</p>
               <ul class="list-unstyled">
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
+                <li><a href="./go/fnf-hellbeats.html" class="text-white">FNF Hellbeats</a></li>
+                <li><a href="./go/fnf-hatsune-miku.html" class="text-white">FNF vs Hatsune Miku</a></li>
+                <li><a href="./go/fnf-vs-hex.html" class="text-white">FNF vs Hex</a></li>
+                <li><a href="./go/fnf-week-7.html" class="text-white">FNF Week 7</a></li>
+                <li><a href="./go/fnf-vs-shaggy.html" class="text-white">FNF vs Shaggy</a></li>
+                <li><a href="./go/friday-night-funkin.html" class="text-white">Friday Night Funkin</a></li>
+                <li><a href="./go/fnf-vs-void.html" class="text-white">FNF vs Void</a></li>
               </ul>
             </div>
             <div class="col-md col-12">
-              <p class="footer-heading">Menu Heading</p>
+              <p class="footer-heading">Sports</p>
               <ul class="list-unstyled">
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
+                <li><a href="./go/soccer-skills-euro-cup.html" class="text-white">Soccer Euro Cup</a></li>
+                <li><a href="./go/bumper-cars-soccer.html" class="text-white">Bumper Cars Soccer</a></li>
+                <li><a href="./go/bouncy-basketball.html" class="text-white">Bouncy Basketball</a></li>
+                <li><a href="./go/basket-bros.htm" class="text-white">Basket Bros</a></li>
+                <li><a href="./go/perfect-dunk.html" class="text-white">Perfect Dunk</a></li>
+                <li><a href="./go/dunk-perfect.html" class="text-white">Dunk Perfect</a></li>
+                <li><a href="./go/slalom-hero.htm" class="text-white">Slalom Hero</a></li>
               </ul>
             </div>
             <div class="col-md col-12">
-              <p class="footer-heading">Menu Heading</p>
+              <p class="footer-heading">Shooting</p>
               <ul class="list-unstyled">
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="" class="text-white">Aa Baa</a></li>
-                <li><a href="/dmca.html" class="text-white">DMCA</a></li>
+                <li><a href="./go/stick-defenders.html" class="text-white">Stick Defenders</a></li>
+                <li><a href="./go/drunken-duel.html" class="text-white">Drunken Duel</a></li>
+                <li><a href="./go/stick-merge.html" class="text-white">Stick Merge</a></li>
+                <li><a href="./go/funny-shooter-2.html" class="text-white">Funny Shooter 2</a></li>
+                <li><a href="./go/skibidi-shooter.html" class="text-white">Skibidi Shooter</a></li>
+                <li><a href="./go/masked-forces.html" class="text-white">Masked Forces</a></li>
+                <li><a href="./dmca.html" class="text-white">DMCA</a></li>
               </ul>
             </div>
             <hr class="mt-5">
@@ -208,7 +205,4 @@
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
 </body>
-
-<!-- Mirrored from just-fall.github.io/dmca.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 Apr 2024 12:51:48 GMT -->
-
 </html>
